--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongodb": "^4.3.0"
+    "express": "^4.17.2",
+    "mongodb": "^4.3.0",
+    "nodemodule": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
