--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "nodemodule": "^0.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "nodemon": "^2.0.15"
   },
   "description": ""
