--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongodb": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.0",
     "nodemodule": "^0.3.0"
   },
   "devDependencies": {
